--- a/{{ cookiecutter.slug }}/Dockerfile
+++ b/{{ cookiecutter.slug }}/Dockerfile
@@ -15,12 +15,12 @@ COPY go.mod go.sum ./
 RUN go mod download && go mod verify
 
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux GO_OUT="/usr/local/bin/app" make
+RUN CGO_ENABLED=0 GOOS=linux GO_OUT="/usr/local/bin/app/" make
 
 # Run stage
 FROM scratch as runner
 WORKDIR /var
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
-COPY --from=builder /usr/local/bin/app /usr/local/bin/app
+COPY --from=builder /usr/local/bin/app/* /usr/local/bin/app
 COPY resources .
 CMD ["app"]
